# AMD

./: .bashrc  .git-completion.bash  .gitconfig  .gitignore  .vimrc  CMakeLists.txt  CONTRIBUTORS  Playwith Github  README.md  TODO  examples.html  index.html  install.html  install_amd.sh  top.html  try_amd.html  tutorial.html  waf  wscript
AMD/: AMD.hpp  AnjuException.hpp  CMakeLists.txt  EigenMatrixAdaptor.hpp  ElementalMatrixAdaptor.hpp  Exception.hpp  MatrixAdaptor.hpp  MatrixMatrixFunc.hpp  MatrixMatrixFuncHelper.hpp  NumericalMatrixAdaptor.hpp  Optimizer.hpp  RandomMatrices.hpp  ScalarMatrixFunc.hpp  SymbolicCalculator.hpp  SymbolicMatrixAdaptor.hpp  SymbolicMatrixMatlab.hpp  SymbolicMatrixMatlabHelper.hpp  SymbolicOptimizer.hpp  SymbolicScalarMatlab.hpp  SymbolicScalarMatlabHelper.hpp  config.h.in  derivative.cpp  derivative.hpp  derivative.t.cpp  eigenmatrixadaptor.cpp  eigenmatrixadaptor.hpp  eigenmatrixadaptor.t.cpp  exception.cpp  exception.hpp  exceptions.t.cpp  expression.cpp  expression.hpp  expression.t.cpp  expressiontree.cpp  expressiontree.hpp  expressiontree.t.cpp  load.cpp  load.hpp  log.cpp  log.hpp  (+12 more)
AMD/python/: CMakeLists.txt  Exception.cpp  MatrixMatrixFunc.cpp  ScalarMatrixFunc.cpp  SymbolicMatrixMatlab.cpp  SymbolicScalarMatlab.cpp  module.cpp
CMake/: FindEigen3.cmake  cmake_uninstall.cmake.in
_layouts/: base.html
_site/: CONTRIBUTORS  CORNELL  examples.html  index.html  install.html  tutorial.html
_site/AMD/: AMD.hpp  MatrixMatrixFunc.hpp  MatrixVisitor.hpp  SymbolicCalculator.hpp  SymbolicScalarMatlabHelper.hpp
_site/CMake/: FindElemental.cmake
_site/css/: grid.css  style.css
_site/doxygen/: annotated.js  class_a_m_d_1_1detail_1_1_expression_tree-members.html  class_a_m_d_1_1detail_1_1_expression_tree.html  class_a_m_d_1_1detail_1_1_tree.js  class_a_m_d_1_1detail_1_1_valid_operations-members.html  class_a_m_d_1_1detail_1_1_valid_operations.html  derivative_8hpp.html  derivative_8hpp_source.html  doxygen.css  eigenmatrixadaptor_8cpp.html  eigenmatrixadaptor_8hpp.html  eigenmatrixadaptor_8hpp_source.html  eigenmatrixadaptor_8t_8cpp.html  exception_8cpp.html  exceptions_8t_8cpp.html  expression_8cpp.html  expression_8hpp.html  expression_8t_8cpp.html  expressiontree_8cpp.html  expressiontree_8hpp.html  expressiontree_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  load_8cpp.html  load_8hpp_source.html  log_8cpp.html  matrixadaptor_8cpp.html  matrixadaptor_8hpp.html  matrixadaptor_8hpp_source.html  matrixgrammar_8hpp.html  matrixgrammar_8hpp_source.html  namespace_a_m_d.html  namespace_a_m_d_1_1detail.html  (+55 more)
_site/fonts/: sourcesanspro-extralight-webfont.eot  sourcesanspro-light-webfont.eot  sourcesanspro-regular-webfont.eot  stylesheet.css
_site/tests/: ElementalSample.cpp  SymbolicCalculator.cpp  TestMatrixMatrixFunc.cpp  TestSparseEigenAdaptor.cpp  wscript
css/: grid.css  style.css
docs/: .gitignore  README.txt
docs/doxygen/: Doxyfile  footer.html  header.html  header.tex
docs/install/: Makefile  documentation.tex  download.tex  footer.tex  header.tex  installation.tex  main.tex  troubleshooting.tex
docs/project/: Makefile  amd.tex  header.tex
docs/tutorial/: .gitignore  Makefile  amd.tex  automatic.tex  box-pdt.tex  direct-matrix-pdt.tex  footer.tex  header.tex  introduction.tex  matrix-matrix-diff.tex  motivation.tex  numeric.tex  overview.tex  scalar-matrix-diff.tex  software-contributions.tex  symbolic.tex  taylor-expansion.tex  theory-contributions.tex
doxygen/: annotated.html  class_a_m_d_1_1detail_1_1_expression_tree-members.html  class_a_m_d_1_1detail_1_1_expression_tree.html  class_a_m_d_1_1detail_1_1_expression_tree.js  class_a_m_d_1_1detail_1_1_tree-members.html  class_a_m_d_1_1detail_1_1_tree.html  class_a_m_d_1_1detail_1_1_valid_operations-members.html  class_a_m_d_1_1detail_1_1_valid_operations.html  class_a_m_d_1_1detail_1_1_valid_operations.js  classes.html  derivative_8cpp.html  derivative_8hpp.html  derivative_8hpp.js  derivative_8hpp_source.html  derivative_8t_8cpp.html  doxygen.css  eigenmatrixadaptor_8hpp_source.html  exception_8cpp.html  exception_8hpp.html  exception_8hpp.js  exception_8hpp_source.html  expression_8hpp.html  expression_8hpp.js  expression_8hpp_source.html  expressiontree_8hpp.html  expressiontree_8hpp_source.html  expressiontree_8t_8cpp.html  files.html  files.js  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  hierarchy.js  index.html  load_8hpp.html  load_8hpp_source.html  (+69 more)
doxygen-css/: README.txt  search.css  tabs.css
doxygen/search/: all_0.js  all_1.js  all_11.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_10.js  functions_11.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_9.js  functions_b.js  functions_c.js  functions_e.js  functions_f.js  namespaces_0.js  (+5 more)
examples/eigen/: eigen.cpp  options.hpp  wscript
examples/roman/: roman.m.cpp  wscript
examples/simple/: simple.m.cpp  wscript
fonts/: merriweather-light-webfont.eot  sourcesanspro-bold-webfont.eot
old-stuff/cho-code/: FwdDiff.hpp
old-stuff/peder-scalar-diff/: Diff.C  Diff.H  Diff2.C  (+15 more)
presentation/: Makefile  example.tex
tests/: CMakeLists.txt  SymbolicCalculator.cpp  SymbolicSample.cpp  TaylorSample.cpp  TestDenseEigenAdaptor.cpp  TestElementalAdaptor.cpp  TestMatrixMatrixFunc.cpp  TestOptimizer.cpp  TestSymbolicMatrices.cpp  UnitTest.cpp
tests/python/: SymbolicSample.py  TestMatrixMatrixFunc.py  TestSymbolicMatrices.py  setup.py  symbolic_sample.py  test_SymMMF.py
waf-extras/: boost.py  common-package.py  common-task.py  common-tool.py  doxygen.py  eigen.py  elemental.py  mitie.py  pyheaders.py  pythondev.py
(+63 files in other folders)
